tests/ui/dont_panic_idx.stderr
error: indexing operations can panic if the indexed value isn't present
 --> $DIR/dont_panic_idx.rs:7:13
  |
7 |     let _ = x[1];
  |             ^^^^
  |
note: the lint level is defined here
 --> $DIR/dont_panic_idx.rs:2:9
  |
2 | #![deny(redpen::dont_panic)]
  |         ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

